--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,9 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.2"
+  },
+  "dependencies": {
+    "lodash": "~4.16.6",
+    "angular-google-maps": "2.1.5"
   }
 }
